force-app/main/default/objects/Contract_Line_Item__c/fields/Amendment_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Group_Id__c</fullName>
    <label>Amendment Group Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>