force-app/main/default/objects/Contract_Line_Item__c/fields/Created_From__c.field-meta.xml
<CustomField>
    <fullName>Created_From__c</fullName>
    <label>Created From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription Creation</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>