force-app/main/default/objects/Contract_Line_Item__c/fields/Invoiced_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Quantity__c</fullName>
    <inlineHelpText>Sum of all invoices subtracting return invoices and NOT adding cancelled and FA invoices.</inlineHelpText>
    <label>Invoiced Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>