force-app/main/default/objects/Contract_Line_Item__c/fields/Latest_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Latest_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest QL</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Contract Line Items (Latest QL)</relationshipLabel>
    <relationshipName>Contract_Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>