force-app/main/default/objects/Contract_Line_Item__c/fields/Latest_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Latest_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Sub</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Contract Line Items (Latest Sub)</relationshipLabel>
    <relationshipName>Contract_Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>