force-app/main/default/objects/Contract_Line_Item__c/fields/MD_Status__c.field-meta.xml
<CustomField>
    <fullName>MD_Status__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(Original_Subscription_Ref__r.AutoClosedInfo__c, &quot;Y1&quot;),
    ISPICKVAL(Original_Subscription_Ref__r.AutoClosedInfo__c, &quot;Y2&quot;),
    ISPICKVAL(Latest_Subscription__r.AutoClosedInfo__c, &quot;Y1&quot;),
    ISPICKVAL(Latest_Subscription__r.AutoClosedInfo__c, &quot;Y2&quot;)
  ),
  &quot;Completed&quot;,
  IF(
    AND(NOT(ISBLANK(Total_Available_Quantity__c)), Total_Available_Quantity__c &lt;= 0),
    &quot;Completed&quot;,
    IF(
      AND(NOT(ISBLANK(End_Date__c)), TODAY() &gt; End_Date__c),
      &quot;Expired&quot;,
      &quot;Open&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>