force-app/main/default/objects/Contract_Line_Item__c/fields/Original_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original QL</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Contract Line Items (Original QL)</relationshipLabel>
    <relationshipName>Contract_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>