force-app/main/default/objects/Contract_Line_Item__c/fields/Original_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Original_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original Subscription</label>
    <type>Checkbox</type>
</CustomField>