force-app/main/default/objects/Contract_Line_Item__c/fields/Original_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Subscription_Id__c</fullName>
    <label>Original Subscription Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>