force-app/main/default/objects/Contract_Line_Item__c/fields/Original_Subscription_Ref__c.field-meta.xml
<CustomField>
    <fullName>Original_Subscription_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Sub</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Contract Line Items (Original Sub)</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>