force-app/main/default/objects/Contract_Line_Item__c/fields/PMC_CPQ_RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RejectionReason__c</fullName>
    <label>Rejected Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>