force-app/main/default/objects/Contract_Line_Item__c/fields/PMC_CPQ_SubscriptionNumberIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SubscriptionNumberIdentifier__c</fullName>
    <formula>Subscription__r.PMC_CPQ_SubscriptionNumberIdentifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Number Identifier</label>
    <type>Text</type>
</CustomField>