force-app/main/default/objects/Contract_Line_Item__c/fields/Ready_For_Sync__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready For Sync</label>
    <type>Checkbox</type>
</CustomField>