force-app/main/default/objects/Contract_Line_Item__c/fields/SAP_ContractLineItem_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_ContractLineItem_ID__c</fullName>
    <label>SAP ContractLineItem ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>