force-app/main/default/objects/Contract_Line_Item__c/fields/Source_Quote__c.field-meta.xml
<CustomField>
    <fullName>Source_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>