force-app/main/default/objects/Contract_Line_Item__c/fields/Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error__c</fullName>
    <label>Sync Error</label>
    <length>20</length>
    <type>Text</type>
</CustomField>