force-app/main/default/objects/Contract_Line_Item__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>