force-app/main/default/objects/Contract_Line_Item__c/fields/Total_Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Quantity__c</fullName>
    <inlineHelpText>Quantity available to be consumed from the contract into sales order.</inlineHelpText>
    <label>Total Available Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>