force-app/main/default/objects/Contract_Line_Item__c/fields/Total_Consumed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Consumed_Quantity__c</fullName>
    <inlineHelpText>Invoiced quantity subtracting ordered quantity.</inlineHelpText>
    <label>Qty to Ship</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>