force-app/main/default/objects/Contract_Line_Item__c/fields/Total_Ordered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Ordered_Quantity__c</fullName>
    <inlineHelpText>Sum of all sales orders subtracting return orders and NOT adding cancelled and rejected orders and order lines.</inlineHelpText>
    <label>Total Ordered Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>